Substituted toList() with collect(Collectors.toList()) for Java version compatibility