@@ -1,6 +1,7 @@
 package it.isa.cakeshop;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 // Classe che gestisce torte e ordini
 public class CakeShop {
@@ -16,14 +17,14 @@ public class CakeShop {
     public List<Cake> getCakesByCategory(Category category) {
         return cakes.stream()
                 .filter(cake -> cake.getCategory() == category)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // Cerca torte per parola chiave
     public List<Cake> searchCakes(String keyword) {
         return cakes.stream()
                 .filter(cake -> cake.getName().toLowerCase().contains(keyword.toLowerCase()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // Elenca tutte le torte
